Refactoring to enable containerization